--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 telethon = "*"
 requests = "*"
 pytz = "*"
+google-generativeai = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3"
+python_version = "3.13"
